# my_first_pandas_project

./: .gitignore  README.md  main.py  pyproject.toml
analysis/: course.ipynb
notebooks/: 10_dataframe_4.ipynb  11_dataframe_5_atributos.ipynb  12_dataframe_6_conversiones.ipynb  13_dataframe_7_manipulacion.ipynb  14_dataframe_8_concatenacion.ipynb  15_dataframe_9_mezclar.ipynb  1_pandas_exampl.ipynb  2_primeros_pasos.ipynb  3_series_op.ipynb  4_series.ipynb  5_series_funciones_1.ipynb  6_series_funciones_2.ipynb  7_dataframe_1.ipynb  8_dataframe_2.ipynb  9_dataframe_3.ipynb  estudiantes.csv  estudiantes.xlsx  estudiantes_conv.csv
