[tool.poetry]
name = "my-first-panda-project"
version = "0.1.0"
description = "The description of the package"

license = "license"

authors = [
    "Gloria Raquel Leyva Jerez <leyvajerezgr@gmail.com>"
]

repository = "https://github.com/grleyvaj/poetry"

readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
uvicorn = "^0.23.2"
numpy = "^1.25.2"
pandas = "^2.1.0"
pip = "^23.2.1"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
python = "^3.10"
ipykernel = "^6.25.1"
